# ArchiverGPU

./: .gitmodules  CMakeLists.txt  README.md  todo.list
src/: main.cpp
src/archiver/: archiver.cpp  archiver.hpp  binary_lib.cpp  binary_lib.hpp  cppl.cpp  cppl.hpp  main.cpp  other_func.hpp
src/archiver/config/kernels/: archiver.cl
src/tests/: simple_test.cpp  test_archiver.cpp  test_archiver_cpu.cpp
